# browser

./: .apply_task_projects.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  GOALS.md  LEGEND.md  MAP.md  PHILOSOPHY.md  README.md  REPO_RULES.md  TROUBLESHOOTING.md  VISIBLE_MODE.md  mcp_config.json  pyproject.toml  requirements.txt
.serena/: project.yml
ai/: protocol.yaml
contracts/: extension_bridge.json  extension_bridge.md  unified_tools.json  unified_tools.md
docs/: AGENT_PLAYBOOK.md  APPS.md  DOC_STYLE.md  MACROS.md  RELEASE_NOTES.md  RUNBOOKS.md  RUN_GUIDE.md  SKILL_BROWSER_MCP_EFFECTIVE.md
mcp_servers/: __init__.py
scripts/: generate_contracts.py  install_chromium.sh  install_local_chromium.sh  run_browser_mcp.py  run_browser_mcp.sh  run_visible_browser.sh  start_user_browser_cdp.sh  structure_gate.py
tests/: demo_visible.py  integration_test.py  test_antigravity_mcp.py  test_app_miro_adapter.py  test_artifacts.py  test_ax_input_aliases.py  test_browser_mcp.py  test_browser_memory.py  test_browser_memory_persist.py  test_cdp_cookie_fetch.py  test_contracts.py  test_diagnostics_extension_noise_filter.py  test_diagnostics_insights.py  test_diagnostics_strict_checks.py  test_download_artifact_sha256.py  test_drop_flow.py  test_extension.py  test_extension_auto_heal.py  test_extension_auto_launcher.py  test_extension_health.py  test_extension_mode_gateway.py  test_extension_multi_client.py  test_extract_policy.py  test_flow_act_label.py  test_flow_act_stale_refresh.py  test_flow_audit_report.py  test_flow_auto_dialog.py  test_flow_auto_download.py  test_flow_auto_tab.py  test_flow_dialog_guard_autohandle.py  test_flow_graph_report.py  test_flow_internal_actions.py  test_flow_map_report.py  test_flow_mem_interpolation.py  test_flow_policy.py  test_flow_vars_interpolation.py  test_flow_watchdog_abort.py  test_import_flow.py  test_locators_overlay_screenshot.py  test_macro_include_memory_steps_recursion.py  (+31 more)
tools/: context  contracts  contracts.plan  doctor.plan  gate  (+6 more)
(+215 files in other folders)
