[project]
name = "browser-mcp"
version = "0.1.0"
description = "MCP server for browser automation via Chrome DevTools Protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websocket-client==1.9.0",
    "websockets==15.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
browser-mcp = "mcp_servers.browser.main:main"
browser-mcp-native-host = "mcp_servers.browser.native_host:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_servers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["mcp_servers"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    # Browser tools require real Chrome - covered by integration tests
    "mcp_servers/browser/tools/*",
    "mcp_servers/browser/session.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
# Core modules (config, launcher, server, http_client) should have good coverage
# Browser tools require real Chrome and are covered by integration tests
fail_under = 50

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "vendor/**",
    ".venv/**",
    "data/**",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_servers"]
